--- a/app/src/main/res/layout/main_fragment.xml
+++ b/app/src/main/res/layout/main_fragment.xml
@@ -38,14 +38,14 @@
                 style="@style/Widget.MaterialComponents.Chip.Choice"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/chip_normal_text" />
+                android:text="@string/chip_today_apod_text" />
 
             <com.google.android.material.chip.Chip
                 android:id="@+id/chipHDImage"
                 style="@style/Widget.MaterialComponents.Chip.Choice"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/chip_hd_text" />
+                android:text="@string/chip_yesterday_apod_text" />
 
         </com.google.android.material.chip.ChipGroup>
 
