--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
+<resources>
     <!-- Base application theme. -->
-    <style name="Theme.MaterialApp" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.MaterialApp" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/purple_500</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
@@ -9,8 +9,53 @@
         <item name="colorSecondary">@color/teal_200</item>
         <item name="colorSecondaryVariant">@color/teal_700</item>
         <item name="colorOnSecondary">@color/black</item>
+
+        <item name="headerColor">@color/black</item>
+        <item name="android:statusBarColor">@color/black</item>
+
+    </style>
+
+    <style name="Theme.MOON" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+        <!-- Primary brand color. -->
+        <item name="colorPrimary">@color/moon_gray</item>
+        <item name="colorPrimaryVariant">@color/moon_gray_dark</item>
+        <item name="colorOnPrimary">@color/white</item>
+        <!-- Secondary brand color. -->
+        <item name="colorSecondary">@color/moon_black</item>
+        <item name="colorSecondaryVariant">@color/moon_black</item>
+        <item name="colorOnSecondary">@color/black</item>
+        <!-- Status bar color. --><!-- Customize your theme here. -->
+        <item name="headerColor">@color/moon_black</item>
+
+    </style>
+
+    <style name="Theme.MARS" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+        <!-- Primary brand color. -->
+        <item name="colorPrimary">@color/mars_orange_light</item>
+        <item name="colorPrimaryVariant">@color/mars_orange_light</item>
+        <item name="colorOnPrimary">@color/white</item>
+        <!-- Secondary brand color. -->
+        <item name="colorSecondary">@color/mars_red</item>
+        <item name="colorSecondaryVariant">@color/mars_white</item>
+        <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
-        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
+        <item name="android:statusBarColor">@color/mars_orange_light</item>
         <!-- Customize your theme here. -->
+        <item name="headerColor">@color/mars_red</item>
+    </style>
+
+    <style name="Theme.EARTH" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+        <!-- Primary brand color. -->
+        <item name="colorPrimary">@color/earth_blue</item>
+        <item name="colorPrimaryVariant">@color/earth_white</item>
+        <item name="colorOnPrimary">@color/white</item>
+        <!-- Secondary brand color. -->
+        <item name="colorSecondary">@color/earth_green</item>
+        <item name="colorSecondaryVariant">@color/earth_yellow</item>
+        <item name="colorOnSecondary">@color/black</item>
+        <!-- Status bar color. -->
+        <item name="android:statusBarColor">@color/earth_blue</item>
+        <!-- Customize your theme here. -->
+        <item name="headerColor">@color/earth_blue</item>
     </style>
 </resources>
