Добавил viewPager для просмотра фото с разных камер, отрефакторил приложение

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,7 @@
         android:background="?attr/colorPrimary"
         app:layout_constraintTop_toTopOf="parent"
         app:menu="@menu/theme_menu"
-        app:title="Nasa App"
+        app:title="@string/app_toolbar_title"
         app:titleTextColor="?attr/colorSecondary" />
 
     <androidx.fragment.app.FragmentContainerView
