--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,5 @@
 <resources>
     <dimen name="margin_medium">16dp</dimen>
     <dimen name="fab_max_image_size">54dp</dimen>
+    <dimen name="toolbar_image_height">124dp</dimen>
 </resources>
