--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,4 +3,6 @@
     <dimen name="margin_medium">16dp</dimen>
     <dimen name="fab_max_image_size">54dp</dimen>
     <dimen name="toolbar_image_height">124dp</dimen>
+    <dimen name="icon_width">64dp</dimen>
+    <dimen name="icon_height">64dp</dimen>
 </resources>
