Добавил экран с заметками, экран добавления заметки и базу данных для их хранения

--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -11,4 +11,10 @@
         android:icon="@mipmap/mars"
         android:title="@string/bottom_nav_mars"
         app:showAsAction="always" />
+
+    <item
+        android:id="@+id/notes"
+        android:icon="@drawable/ic_baseline_notes_24"
+        android:title="@string/bottom_nav_notes"
+        app:showAsAction="always" />
 </menu>
