--- a/app/src/main/res/layout/note_item.xml
+++ b/app/src/main/res/layout/note_item.xml
@@ -35,6 +35,15 @@
             android:layout_margin="@dimen/margin_medium"
             tools:text="Всем привет! Как дела?\n Все хорошо" />
 
+        <com.google.android.material.textview.MaterialTextView
+            android:id="@+id/priority"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/margin_medium"
+            android:textAlignment="viewEnd"
+            android:textAppearance="@style/Text.Small"
+            tools:text="Priority" />
+
         <androidx.appcompat.widget.LinearLayoutCompat
             android:layout_width="match_parent"
             android:layout_height="match_parent">
