--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -12,6 +12,11 @@
         <item name="android:textColor">?attr/headerColor</item>
     </style>
 
+    <style name="Text.Small">
+        <item name="android:textSize">8sp</item>
+        <item name="fontFamily">@font/clear_sans_bold</item>
+    </style>
+
     <style name="CardView.Description" parent="Widget.Material3.CardView.Outlined">
         <item name="strokeColor">?attr/colorPrimary</item>
     </style>
