--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -26,6 +26,7 @@
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. --><!-- Customize your theme here. -->
         <item name="headerColor">@color/moon_black</item>
+        <item name="fontFamily">@font/monda</item>
 
     </style>
 
@@ -42,6 +43,7 @@
         <item name="android:statusBarColor">@color/mars_orange_light</item>
         <!-- Customize your theme here. -->
         <item name="headerColor">@color/mars_red</item>
+        <item name="fontFamily">@font/martel_sans_light</item>
     </style>
 
     <style name="Theme.EARTH" parent="Theme.MaterialComponents.DayNight.NoActionBar">
@@ -57,5 +59,6 @@
         <item name="android:statusBarColor">@color/earth_blue</item>
         <!-- Customize your theme here. -->
         <item name="headerColor">@color/earth_blue</item>
+        <item name="fontFamily">@font/cambay</item>
     </style>
 </resources>
